# xui-note

./: LICENSE  README.md
code/qt/qt-base/: CMakeLists.txt  CMakePresets.json  Makefile
code/qt/qt-base/src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp
code/qt/qt-hello/: CMakeLists.txt  CMakePresets.json
dox/: mkdocs.yml
dox/docs/about/: material_base_use.md
dox/docs/qt/: a01_summary.md  a02_install.md  a03_hello.md  a04_base.md
